--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https:Fosu-Kelvin.github.io/Akusika-Protocols",
-
+  "homepage": "https://Fosu-Kelvin.github.io/Akusika-Protocols",
   "name": "akusika-protocols",
   "version": "0.1.0",
   "private": true,
